--- a/Report/setting/glossary.tex
+++ b/Report/setting/glossary.tex
@@ -43,3 +43,4 @@
 \newacronym{js}{JS}{JavaScript}
 \newacronym{mvvm}{MVVM}{Model-View-ViewModel}
 \newacronym{ts}{TS}{TypeScript}
+\newacronym{dom}{DOM}{Document Object Model}
