--- a/Report/setting/glossary.tex
+++ b/Report/setting/glossary.tex
@@ -44,3 +44,4 @@
 \newacronym{mvvm}{MVVM}{Model-View-ViewModel}
 \newacronym{ts}{TS}{TypeScript}
 \newacronym{dom}{DOM}{Document Object Model}
+\newacronym{wpf}{WPF}{Windows Presentation Foundation}
