--- a/Report/setting/codestyle.tex
+++ b/Report/setting/codestyle.tex
@@ -77,10 +77,10 @@
 
 % JavaScript
 \lstdefinelanguage{JavaScript}{
-	morekeywords={ import, class, export, @NgModule, from, @Component, implements, extends,  @Input, @Output, new, return, @Pipe, public, private, interface, enum }, % keywords
+	morekeywords={ import, class, export, @NgModule, from, @Component, implements, extends,  @Input, @Output, new, return, @Pipe, public, private, interface, enum, @Injectable, constructor }, % keywords
 	basicstyle=\ttfamily \color{black} \small \smaller,
 	emphstyle={\color{vs_class}},
-	emph={ AssignmentSearchComponent, AssignmentEditComponent, PipeModule, ModalModule, TooltipModule, ModelViewModul, TimepickerModule, FormsModule, CommonModule, assignmentRouting, AssignmentComponent, AssignmentOverviewComponent, AssignmentService, AssignmentModule, NgModule, OnInit, NavItemComponent, Component, EventEmitter, Input, Output, AngularMenuItem, Pipe, PipeTransform, BooleanYesNoPipe, boolean, string }, % classnames
+	emph={ AssignmentSearchComponent, AssignmentEditComponent, PipeModule, ModalModule, TooltipModule, ModelViewModul, TimepickerModule, FormsModule, CommonModule, assignmentRouting, AssignmentComponent, AssignmentOverviewComponent, AssignmentService, AssignmentModule, NgModule, OnInit, NavItemComponent, Component, EventEmitter, Input, Output, AngularMenuItem, Pipe, PipeTransform, BooleanYesNoPipe, boolean, string, Injectable, ElectronService, MenuItemService, AngularMenuItem, Electron, MenuItem }, % classnames
 	showspaces=false,
 	showtabs=false,
 	breaklines=true,
