proofread until NgModules

--- a/Report/pages/angular/structure.tex
+++ b/Report/pages/angular/structure.tex
@@ -6,42 +6,42 @@ This Section describes how an Angular application is structued.
 
 \Subsection[components]{Components}
 
-An Angular component can be compared to a View and ViewModel combo from the \gls{mvvm} Pattern. It is composed of three files. There is one \gls{html} and one \gls{css} file which together are the View. The ViewModel is a \gls{ts} file which contains the essetial logic for the View to function. The component is always declared in the \gls{ts} File with the \lstcode{@Component} decorator, see \myautoref{lst:example-component.ts}.
+An Angular component can be compared to a View and ViewModel combo from the \gls{mvvm} pattern. It is composed of three files. There is one \gls{html} and one \gls{css} file which maken up the View. The ViewModel is a \gls{ts} file which contains the essential logic for the View. The component is always declared in the \gls{ts} file with the \lstcode{@Component} decorator, see \myautoref{lst:example-component.ts}.
 
 \file{example-component.ts}{Example of an Angular Component TypeScript File}{JavaScript}
 
-The \lstcode{@Component} decorator can take many arguments but the commonly used ones are: \enquote{selector}, \enquote{templateUrl}, and \enquote{styleUrls} \cite{ngcomponent}. The selector is a string which starts by convention with \enquote{app} and is then followed by the components name, see \mylineref{lst:example-component.ts}{comp_selector}. The selector is used if a component wants to include another component in its \gls{html}.
+The \lstcode{@Component} decorator can take many arguments, but the commonly used ones are: \enquote{selector}, \enquote{templateUrl}, and \enquote{styleUrls} \cite{ngcomponent}. The selector is a string which starts by convention with \enquote{app} and is then followed by the component's name, see \mylineref{lst:example-component.ts}{comp_selector}. The selector is used to include this component in the \gls{html} of another component.
 
-The \enquote{templateUrl} and \enquote{styleUrls} arguments reference the corresponding \gls{html} and \gls{css} files respectivly (\mylineref{lst:example-component.ts}{comp_templateUrl} and \ref{line:comp_styleUrls}). These arguments take a relative path to a file or multiple files in the case of \enquote{styleUrls} in the project. For both arguments there are inline variants though for redability concerns they should be avoided when possible.
+The \enquote{templateUrl} and \enquote{styleUrls} arguments reference the corresponding \gls{html} and \gls{css} files respectively (\mylineref{lst:example-component.ts}{comp_templateUrl} and \ref{line:comp_styleUrls}). Both arguments take a relative path, \enquote{templateUrl} is always related to a single file, \enquote{styleUrls} may be related to multiple files in the project. Inline variants may be used for both arguments, though out of readability concerns they should be avoided when possible.
 
 \Subsubsection{Lifecycle Hooks}
-Each components lifecycle is managed by the Angular framework. The developer can implement diferent Interfaces to be able to respond to these lifecycle events. Although since at runtime the executed code is JavaScript it is not necessary to implement these Interfaces. Angular will check any component if it contains a method like \zB \lstcode{ngOnInit()} and if so will call this method. One of these hooks is the \lstcode{OnInit} Interface with its \lstcode{ngOnInit()} Method, as shown in \mylineref{lst:example-component.ts}{comp_OnInit} and \ref{line:comp_ngOnInit}. Every components lifecycle starts with a call to its constructor and is then followed by the events: \lstcode{NgOnChanges()}, \lstcode{ngOnInit()}, \lstcode{ngDoCheck()}, \lstcode{ngAfterContentInit()}, \lstcode{ngAfterContentChecked()}, \lstcode{ngAfterViewInit()}, \lstcode{ngAfterViewChecked()}, \lstcode{ngOnDestroy()}. \cite{angularLifecycleHooks}
+The Angular framework manages the lifecycle of each component. Throught this lifecycle Angular offers the possibility to respond to certain events \zB \lstcode{ngOnDestroy()} where the developer could run a cleanup routine. In order to respond to any of these events the developer has to implement one method per event. The method signatures are defined by the Angular framework and exposed as interfaces. Since the executed code at runtime is \gls{js} code, interfaces aren't necessary. Nonetheless it is considered \enquote{best-practice} to use these interfaces.
 
 \Subsubsection{Template Syntax - Bindings}
-A Template in the Angular context is equivalent to a \gls{mvvm} View and is written in \gls{html}. All \gls{html} tags are allowed, though some tags like \lstcode{<html>} or \lstcode{<body>} don't make much sense. The official tags are extended through tags that refer to components like described in \myref{subsec:components}.
+A template in the Angular context is equivalent to a \gls{mvvm} View and is written in \gls{html}. All \gls{html} tags are allowed, though some tags like \lstcode{<html>} or \lstcode{<body>} don't make much sense. The official set of tags is extended with tags that refer to components as described in \myref{subsec:components}.
 
 \file{nav-item-component.html}{Example of an Angular template.}{HTML5}
 
-Like many \gls{mvvm} frameworks Angular supports Bindings. These are used to display data obtained from the ViewModel or in case of input controls send data back to the ViewModel. To display data interpolation is used. The syntax used by Angular is \{\{\lstcode{myObject.myProperty}\}\} like shown in \mylineref{lst:nav-item-component.html}{navItem_interpolation}. Angular will evalute the text between the curly brakets as an expression and then display the result. The context for the expression usually is the component instance.
+Like many \gls{mvvm} frameworks, Angular supports bindings. These are used to display data obtained from the ViewModel or, in case of input controls, send data back to the ViewModel. Interpolation is used to display data. The syntax used by Angular is \{\{\lstcode{myObject.myProperty}\}\} as shown in \mylineref{lst:nav-item-component.html}{navItem_interpolation}. Angular will evalute the text between the curly brackets as an expression and then display the result. The context for the expression usually is the component's instance.
 
-In case data from the ViewModel should be passed on to another component, which is referenced via its \gls{html} tag, the square braket notation is used (\mylineref{lst:nav-item-component.html}{navItem_inputProperty}). It is also possible to use the \lstcode{bind-} prefix \zB \lstcode{bind-CurrentItem="subItem"}. For both of these methods to work the receiving component needs a property in its ViewModel which is decalred with the \lstcode{@Input()} decorator, see \mylineref{lst:example-component.ts}{comp_input}.
+In case data from the ViewModel should be passed on to another component, which is referenced via its \gls{html} tag, the square bracket notation is used (\mylineref{lst:nav-item-component.html}{navItem_inputProperty}). It is also possible to use the \lstcode{bind-} prefix \zB \lstcode{bind-CurrentItem="subItem"}. For both of these methods to work, the receiving component needs a property in its ViewModel which is declared with the \lstcode{@Input()} decorator, see \mylineref{lst:example-component.ts}{comp_input}.
 
-For events the standard \gls{js} round braket notation (\mylineref{lst:nav-item-component.html}{navItem_inputProperty}) or the \lstcode{on-} prefix \zB \lstcode{on-ItemClicked="ItemClicked.emit()"} are used. Custom conponents can declare their own events using the \lstcode{@Output()} decorator on a property (\mylineref{lst:example-component.ts}{comp_output}). The property usually is of type \lstcode{EventEmitter}. If RxJS Observables are used \lstcode{Observable<T>}, or \lstcode{Subject<T>} are also possible.
+For events, the standard \gls{js} round bracket notation (\mylineref{lst:nav-item-component.html}{navItem_inputProperty}) or the \lstcode{on-} prefix \zB \lstcode{on-ItemClicked="ItemClicked.emit()"} are used. Custom conponents can declare their own events using the \lstcode{@Output()} decorator on a property (\mylineref{lst:example-component.ts}{comp_output}). The property usually is of type \lstcode{EventEmitter}. If RxJS Observables are used, \lstcode{Observable<T>} or \lstcode{Subject<T>} are also possible.
 
-Forms often present the user with a \enquote{Combobox} or \enquote{Dropdown} of which the \lstcode{SelectedItem} is supposed to be \enquote{mirrored} to a property in the component, to give the developer easy access to read but also change the value from within the ViewModel. In this case a two-way binding can be used. Angular uses the \enquote{Banana-in-a-box} notation which are round brakets inside square brakets \zB \lstcode{[(SelectedItem)]="userSelection"}. The two-way binding can also be achived using the \lstcode{bindon-} prefix \zB \lstcode{bindon-SelectedItem="userSelection"}.
+Forms often use elements like a \enquote{Combobox} or \enquote{Dropdown} menu of which the \lstcode{SelectedItem} property is supposed to be \enquote{mirrored} to a property in the component. This gives the developer easy access to read but also change the value from within the ViewModel. In this case a two-way binding can be used. Angular uses the \enquote{Banana-in-a-box} notation which are round brackets inside square brackets \zB \lstcode{[(SelectedItem)]="userSelection"}. The two-way binding can also be achived using the \lstcode{bindon-} prefix \zB \lstcode{bindon-SelectedItem="userSelection"}.
 
 \Subsubsection{Template Syntax - Directives}
 
-Angular also exposes different directives which add some functionality to the \gls{html}. The \lstcode{*ngIf} directive determines if the tag it is contained in as well as its children should or shouldn't be part of the \gls{dom}. This was used in the Jukebox project for showing NavItems as an expander if the Item in question had children or if it didn't as a regular Item like shown in \mylineref{lst:nav-item-component.html}{navItem_ngIf}.
+Angular also exposes different directives which add certain functionality to the \gls{html}. The \lstcode{*ngIf} directive determines whether the containing tag, as well as its children, should or should not be part of the \gls{dom}. This was used in the Jukebox project for showing \lstcode{NavItems} as an expander for items with children, or regular for single items, as shown in \mylineref{lst:nav-item-component.html}{navItem_ngIf}.
 
-If said Item contains children each of these child items has to be displayed. For this the \lstcode{*ngFor} directive is used. Its syntax (\mylineref{lst:nav-item-component.html}{navItem_ngFor}) is similar to the \lstcode{foreach} syntaxes of many popular languages. The index tracking is optional but usefull in some cases. Also it is possible to useds the trackBy feature. This is similar to the \lstcode{equals()} C\# method. It allows the \lstcode{*ngFor} directive to deceide the equallity of an item not by its instance reference but a custom defined method. For this to work the developer is required to implement a method with following signature:\\
+If an item contains children each of these child items has to be displayed. For this the \lstcode{*ngFor} directive is used. Its syntax (\mylineref{lst:nav-item-component.html}{navItem_ngFor}) is similar to the \lstcode{foreach} syntaxes of many popular languages. The index tracking is optional, but useful in some cases. Also, it is possible to use the trackBy feature. This is similar to the \lstcode{equals()} C\# method. It allows the \lstcode{*ngFor} directive to decide on the equality of two items not by their instance references, but a custom-defined method. For this to work, the developer is required to implement a method with the following signature:\\
 \lstcode{public myTrackBy(index: number, object: object): number}\\
 
-The third built-in directive is the switch-case directive which lets the developer show content based on a property. \mylineref{lst:nav-item-component.html}{navItem_switch} to \ref{line:navItem_switch_end} is an example of how the \lstcode{NavItem} template could have been debuged.
+The third built-in directive is the switch-case directive which lets the developer show content based on a property. \mylineref{lst:nav-item-component.html}{navItem_switch} to \ref{line:navItem_switch_end} is an example of how the \lstcode{NavItem} template could be debugged.
 
 \Subsubsection{Template Syntax - Pipes}
 
-Angular also offers support for pipes which are very similar to \gls{wpf} Converters, with the exception that an Angular pipe only works in one direction. This is usefull for formatting the \enquote{raw} data \zB \lstcode{\{\{title | uppercase | lowercase\}\}}. As shown in the example pipes can be chained. It is also possible to add parameters to a pipe one example would be the \lstcode{date} pipe where the name for a date format can be passed as an argument \zB \lstcode{\{\{ myDate | date:'longDate'\}\}}. Angular offers many built-in pipes but it is also possible to create a custom one. To do so the developer needs to create a new class which implements the \lstcode{PipeTransform} method and use the \lstcode{@Pipe()} decorator like shown in \myautoref{lst:boolean-yes-no-pipe.ts}.
+Angular also offers support for pipes which are very similar to \gls{wpf} Converters, with the exception that an Angular pipe only works in one direction. This is useful for formatting the \enquote{raw} data \zB \lstcode{\{\{title | uppercase | lowercase\}\}}. As shown in the example, pipes can be chained. It is also possible to add parameters to a pipe, one example is the \lstcode{date} pipe, where the name for a date format can be passed as an argument \zB \lstcode{\{\{ myDate | date:'longDate'\}\}}. Angular offers many built-in pipes, but it is also possible to create a custom one. To do so, the developer creates a new class which implements the \lstcode{PipeTransform} interface and uses the \lstcode{@Pipe()} decorator as shown in \myautoref{lst:boolean-yes-no-pipe.ts}.
 
 \file{boolean-yes-no-pipe.ts}{A custom pipe to convert a boolean to 'Yes' or 'No'.}{JavaScript}
 
@@ -51,13 +51,19 @@ Angular also offers support for pipes which are very similar to \gls{wpf} Conver
 
 \Subsection{Services}
 
-An Angular Service is a class which is used to do a specific well defined task. It usually performs operations on data or \revMark{talks} to outside services. This may be to obtain or push data to an \gls{api} the website uses to store its data.
+An Angular service is a class which is used to do a specific, well-defined task. It usually performs operations on data or communicates with outside services for the purpose of obtaining or pushing data to an \gls{api}.
 
 \file{menu-item-service.ts}{A service for managing menu items.}{JavaScript}
 
-Angular services are written in \gls{ts}. They are a class with the \lstcode{@Injectable()} decorator (\mylineref{lst:menu-item-service.ts}{service_cons}) which makes this class visible to the \gls{di} components of the Angular framework. Other then this decorator a services is simply a class which can implement interfaces and declare methods like any other class.
+Angular services are written in \gls{ts}. They are a class with the \lstcode{@Injectable()} decorator (\mylineref{lst:menu-item-service.ts}{service_cons}) which makes this class visible to the \gls{di} components of the Angular framework. With exception of the decorator, a service is simply a class which can implement interfaces and declare methods like any other class.
 
-Services should be used to encapsulate functionallity which helps promote reusibility and modularity. To distinguish weather a method should be implement in a service or a component the question is: Is the method related to how something is displayed? If the answer to this question is yes then the method should be implemented in a component, if its no it should be implemented in a service class.
+Services are used to encapsulate functionality which helps promote reusability and modularity. To determine whether a method should be implemented in a service or a component, the question is: Is the method related to how something is displayed? If the answer to this question is yes, then the method should be implemented in a component, if the answer is no, it should be implemented in a service class.
 
 
 \Subsection{Modules}
+
+When talking about modules in an Angular application, it is important to distinguish between Angular modules, also called NgModules, and \gls{js} (ES2015) modules. Those two are different concepts and can be used side by side. While \gls{js} modules are used to manage collections of \gls{js} objects, NgModules are more like containers for related chunks of code. An NgModule contains components, services, and/or other codes files which all belong to one domain, a workflow, or are performing similar tasks. From an architectural perspective they bear great resemblance to a code library like a \gls{dll}. Like \gls{dll}s, they can import other NgModules and choose which classes, services, and/or components should be exported and which should only be visibile to classes inside the NgModule in question.
+
+\file{app-module.ts}{The Jukebox AppModule file.}{JavaScript}
+
+NgModules are \gls{ts} classes which are decorated with the \lstcode{NgModule()} annotation (\mylineref{lst:app-module.ts}{module_decorator}). Oftentimes the class is completly empty, since the decorator arguments are the important part of the module, essentially the module's metadata.
