Described the @NgModule arguments

--- a/Report/pages/angular/structure.tex
+++ b/Report/pages/angular/structure.tex
@@ -66,4 +66,6 @@ When talking about modules in an Angular application, it is important to disting
 
 \file{app-module.ts}{The Jukebox AppModule file.}{JavaScript}
 
-NgModules are \gls{ts} classes which are decorated with the \lstcode{NgModule()} annotation (\mylineref{lst:app-module.ts}{module_decorator}). Oftentimes the class is completly empty, since the decorator arguments are the important part of the module, essentially the module's metadata.
+NgModules are \gls{ts} classes which are decorated with the \lstcode{NgModule()} annotation (\mylineref{lst:app-module.ts}{module_decorator}). Oftentimes the class is completly empty, since the decorator arguments are the important part of the module, essentially the module's metadata. Each application has to have at least one module, the AppModule.
+
+The \textbf{declarations} argument (\mylineref{lst:app-module.ts}{module_declarations}) is used to declare all components which are part of this module. If a module wants to import other modules those modules need to be listed \revMark{for} the \textbf{imports} argument (\mylineref{lst:app-module.ts}{module_imports}). If the developer chooses to encapsulate the routing configurations into separate modules these modules should always be last to avoid \revMark{dependency chain issues}. The \textbf{exports} argument (\mylineref{lst:app-module.ts}{module_exports}) defines which components, services, and/or modules are visible to other modules which import this module. Angulars \gls{di} configuration is strongly tied to its NgModules. The \textbf{providers} argument references all services, pipes as well as guards the developer wants \revMark{to be able to inject}. It is als possible to use interception, which has to be defined here as well. To be able to use custom \gls{html} tags (see \myref{subsec:components}) the \lstcode{CUSTOM\_ELEMENTS\_SCHEMA} musst be included under in the \textbf{schemas} argument. The \textbf{bootstrap} argument is rarly used, unsully in the AppModule. All components which are added here are marked as entry components for the app start. 
